event page adding title to top and alignment correction

--- a/design/css/style.css
+++ b/design/css/style.css
@@ -252,8 +252,8 @@ footer .copyright-text {
 }
 
 .card-event-image {
-  height: 250px;
-  width: 400px;
+  height: 227px;
+  width: 363px;
 }
 
 .card {
